test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope3.good
requireNotAtModuleScope3.chpl:2: error: cannot use 'require' on a Chapel source file not at module scope
