test/extern/require/errorNotAtModuleScope/requireNotAtModuleScope3.chpl
proc foo() {
  require "dummyFile.chpl"; // should error
}
